Append "-viewmode" to object name of actions associated with services that provide multiple views.

BUG: 322686
FIXED-IN: 4.12.1
REVIEW: 114926